--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -788,7 +788,7 @@
                         <div class="sl_value_logo">
                             <ul>
                                 <li th:each="brand:${result.brands}">
-                                    <a href="/static/search/#">
+                                    <a href="/static/search/#" th:href="${'javascript:searchProducts(&quot;brandId&quot;,'+brand.brandId+')'}">
                                         <img th:src="${brand.brandImg}" alt="">
                                         <div th:text="${brand.brandName}">
                                             华为(HUAWEI)
@@ -811,14 +811,15 @@
                         </a>
                     </div>
                 </div>
-                <!--品牌-->
+                <!--分类-->
                 <div class="JD_pre">
                     <div class="sl_key">
                         <span>分类：</span>
                     </div>
                     <div class="sl_value">
                         <ul>
-                            <li th:each="catalog:${result.catalogs}"><a href="/static/search/#" th:text="${catalog.catalogName}">5.56英寸及以上</a>
+                            <li th:each="catalog:${result.catalogs}">
+                                <a href="/static/search/#" th:href="${'javascript:searchProducts(&quot;catalog3Id&quot;,'+catalog.catalogId+')'}" th:text="${catalog.catalogName}">5.56英寸及以上</a>
                             </li>
                         </ul>
                     </div>
@@ -844,7 +845,7 @@
                     <div class="sl_value">
                         <ul>
                             <li th:each="val:${attr.attrValue}"><a href="/static/search/#"
-                                                                   th:text="${val}">5.56英寸及以上</a></li>
+                                                                   th:href="${'javascript:searchProducts(&quot;attrs&quot;,&quot;'+attr.attrId+'_'+val+'&quot;)'}"  th:text="${val}">5.56英寸及以上</a></li>
                         </ul>
                     </div>
                 </div>
@@ -1981,6 +1982,16 @@
     }, function () {
         $(this).css("color", "#727272")
     })
+
+    function searchProducts(name,value) {
+        var href = location.href+"";
+        if(href.indexOf("?")!=-1){
+            location.href =location.href + "&"+name+"="+value;
+        }else {
+            location.href =location.href + "?"+name+"="+value;
+        }
+
+    }
 </script>
 </body>
 </html>
