--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -402,8 +402,8 @@
         <a href="http://gulimall.com"><img src="/static/search/./image/logo1.jpg" alt=""></a>
     </div>
     <div class="header_form">
-        <input type="text" placeholder="手机"/>
-        <a href="/static/search/#">搜索</a>
+        <input id="keyword_input" type="text" placeholder="手机"/>
+        <a href="javascript:searchByKeyword()">搜索</a>
     </div>
     <div class="header_ico">
         <div class="header_gw">
@@ -788,7 +788,8 @@
                         <div class="sl_value_logo">
                             <ul>
                                 <li th:each="brand:${result.brands}">
-                                    <a href="/static/search/#" th:href="${'javascript:searchProducts(&quot;brandId&quot;,'+brand.brandId+')'}">
+                                    <a href="/static/search/#"
+                                       th:href="${'javascript:searchProducts(&quot;brandId&quot;,'+brand.brandId+')'}">
                                         <img th:src="${brand.brandImg}" alt="">
                                         <div th:text="${brand.brandName}">
                                             华为(HUAWEI)
@@ -819,7 +820,9 @@
                     <div class="sl_value">
                         <ul>
                             <li th:each="catalog:${result.catalogs}">
-                                <a href="/static/search/#" th:href="${'javascript:searchProducts(&quot;catalog3Id&quot;,'+catalog.catalogId+')'}" th:text="${catalog.catalogName}">5.56英寸及以上</a>
+                                <a href="/static/search/#"
+                                   th:href="${'javascript:searchProducts(&quot;catalog3Id&quot;,'+catalog.catalogId+')'}"
+                                   th:text="${catalog.catalogName}">5.56英寸及以上</a>
                             </li>
                         </ul>
                     </div>
@@ -845,7 +848,8 @@
                     <div class="sl_value">
                         <ul>
                             <li th:each="val:${attr.attrValue}"><a href="/static/search/#"
-                                                                   th:href="${'javascript:searchProducts(&quot;attrs&quot;,&quot;'+attr.attrId+'_'+val+'&quot;)'}"  th:text="${val}">5.56英寸及以上</a></li>
+                                                                   th:href="${'javascript:searchProducts(&quot;attrs&quot;,&quot;'+attr.attrId+'_'+val+'&quot;)'}"
+                                                                   th:text="${val}">5.56英寸及以上</a></li>
                         </ul>
                     </div>
                 </div>
@@ -1217,24 +1221,23 @@
                     <div class="filter_page">
                         <div class="page_wrap">
                             <span class="page_span1">
-                                <a href="/static/search/#">
+                                <a class="page_a" th:attr="pn=${result.pageNum - 1}"
+                                   th:if="${result.pageNum>1}">
                                     < 上一页
                                 </a>
-                                <a href="/static/search/#" style="border: 0;color:#ee2222;background: #fff">1</a>
-                                <a href="/static/search/#">2</a>
-                                <a href="/static/search/#">3</a>
-                                <a href="/static/search/#"
-                                   style="border: 0;font-size: 20px;color: #999;background: #fff">...</a>
-                                <a href="/static/search/#">169</a>
-                                <a href="/static/search/#">
+                                <a class="page_a"
+                                   th:attr="pn=${nav},style=${nav == result.pageNum?'border: 0;color:#ee2222;background: #fff':''}"
+                                    th:each="nav:${result.pageNavs}">[[${nav}]]</a>
+                                <a class="page_a" th:attr="pn=${result.pageNum + 1}"
+                                   th:if="${result.pageNum<result.totalPages}">
                                     下一页 >
                                 </a>
                             </span>
                             <span class="page_span2">
-                                <em>共<b>169</b>页&nbsp;&nbsp;到第</em>
+                                <em>共<b>[[${result.totalPages}]]</b>页&nbsp;&nbsp;到第</em>
                                 <input type="number" value="1">
                                 <em>页</em>
-                                <a href="/static/search/#">确定</a>
+                                <a class="page_submit">确定</a>
                             </span>
                         </div>
                     </div>
@@ -1983,14 +1986,36 @@
         $(this).css("color", "#727272")
     })
 
-    function searchProducts(name,value) {
-        var href = location.href+"";
-        if(href.indexOf("?")!=-1){
-            location.href =location.href + "&"+name+"="+value;
-        }else {
-            location.href =location.href + "?"+name+"="+value;
+    function searchProducts(name, value) {
+        var href = location.href + "";
+        if (href.indexOf("?") != -1) {
+            location.href = location.href + "&" + name + "=" + value;
+        } else {
+            location.href = location.href + "?" + name + "=" + value;
         }
 
+    }
+
+    function searchByKeyword() {
+        searchProducts("keyword", $("#keyword_input").val());
+    }
+
+    $(".page_a").click(function () {
+        var pn = $(this).attr("pn");
+        
+        var href = location.href;
+        if(href.indexOf("pageNum")!=-1){
+            location.href = replaceParamVal(href,"pageNum",pn);
+        }else {
+            location.href = location.href+"&pageNum="+pn;
+        }
+        return false;
+    })
+    function replaceParamVal(url,paramName,replaceVal) {
+        var oUrl = url.toString();
+        var re = eval('/('+paramName+'=)([^8]*)/gi');
+        var nUrl = oUrl.replace(re,paramName+'='+replaceVal);
+        return nUrl;
     }
 </script>
 </body>
