187、商城业务-检索服务-页面排序功能

--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -1045,11 +1045,11 @@
                     <!--综合排序-->
                     <div class="filter_top">
                         <div class="filter_top_left">
-                            <a href="/static/search/#">综合排序</a>
-                            <a href="/static/search/#">销量</a>
-                            <a href="/static/search/#">价格</a>
-                            <a href="/static/search/#">评论分</a>
-                            <a href="/static/search/#">上架时间</a>
+                            <a class="sort_a" sort="hotScore" href="/static/search/#">综合排序</a>
+                            <a class="sort_a"  sort="saleCount" href="/static/search/#">销量</a>
+                            <a  class="sort_a" sort="skuPrice" href="/static/search/#">价格</a>
+                            <a class="sort_a"  href="/static/search/#">评论分</a>
+                            <a  class="sort_a" href="/static/search/#">上架时间</a>
                         </div>
                         <div class="filter_top_right">
                             <span class="fp-text">
@@ -2013,9 +2013,48 @@
     })
     function replaceParamVal(url,paramName,replaceVal) {
         var oUrl = url.toString();
-        var re = eval('/('+paramName+'=)([^8]*)/gi');
-        var nUrl = oUrl.replace(re,paramName+'='+replaceVal);
-        return nUrl;
+        if (oUrl.indexOf(paramName)!=-1){
+            var re = eval('/('+paramName+'=)([^8]*)/gi');
+            var nUrl = oUrl.replace(re,paramName+'='+replaceVal);
+            return nUrl;
+        }else {
+            var nUrl ="";
+            if (oUrl.indexOf("?") != -1) {
+                nUrl = oUrl +"&"+paramName+'='+replaceVal;
+            } else {
+                nUrl = oUrl +"?"+paramName+'='+replaceVal;
+            }
+            return nUrl;
+        }
+
+    }
+    $(".sort_a").click(function () {
+        // color: #FFF;border-color: #e4393c;background: #e4393c;
+        changeStyle(this);
+        var sort = $(this).attr("sort");
+        sort = $(this).hasClass("desc")?sort+"_desc":sort+"_asc";
+        location.href = replaceParamVal(location.href,"sort",sort);
+        return false;
+
+    });
+    
+    function changeStyle(ele) {
+        $(".sort_a").css({"color": "#333","border-color": "#CCC","background": "#FFF"});
+        $(".sort_a").each(function () {
+            var text = $(this).text().replace("↓","").replace("↑","");
+            $(this).text(text);
+        });
+        $(ele).css({"color": "#FFF","border-color": "#e4393c","background": "#e4393c"});
+        $(ele).toggleClass("desc");
+        if($(ele).hasClass("desc")){
+            var text = $(ele).text().replace("↓","").replace("↑","");
+            text = text +"↓";
+            $(ele).text(text);
+        }else {
+            var text = $(ele).text().replace("↓","").replace("↑","");
+            text = text +"↑";
+            $(ele).text(text);
+        }
     }
 </script>
 </body>
