188、商城业务-检索服务-页面排序字段回显

--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -1044,10 +1044,10 @@
                 <div class="filter">
                     <!--综合排序-->
                     <div class="filter_top">
-                        <div class="filter_top_left">
-                            <a class="sort_a" sort="hotScore" href="/static/search/#">综合排序</a>
-                            <a class="sort_a"  sort="saleCount" href="/static/search/#">销量</a>
-                            <a  class="sort_a" sort="skuPrice" href="/static/search/#">价格</a>
+                        <div class="filter_top_left" th:with="p=${param.sort}">
+                            <a  th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'hotScore')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}" th:attr="style=${(#strings.isEmpty(p)||#strings.startsWith(p,'hotScore'))?'color: #FFF;border-color: #e4393c;background: #e4393c;':'color: #333;border-color: #CCC;background: #FFF;'}" sort="hotScore" href="/static/search/#">综合排序[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'hotScore')&&#strings.endsWith(p,'desc'))?"↓":"↑"}]]</a>
+                            <a  th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}" th:attr="style=${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount'))?'color: #FFF;border-color: #e4393c;background: #e4393c;':'color: #333;border-color: #CCC;background: #FFF;'}"   sort="saleCount" href="/static/search/#">销量[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount')&&#strings.endsWith(p,'desc'))?"↓":"↑"}]]</a>
+                            <a   th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"  th:attr="style=${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice'))?'color: #FFF;border-color: #e4393c;background: #e4393c;':'color: #333;border-color: #CCC;background: #FFF;'}"  sort="skuPrice" href="/static/search/#">价格[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice')&&#strings.endsWith(p,'desc'))?"↓":"↑"}]]</a>
                             <a class="sort_a"  href="/static/search/#">评论分</a>
                             <a  class="sort_a" href="/static/search/#">上架时间</a>
                         </div>
@@ -2029,7 +2029,8 @@
 
     }
     $(".sort_a").click(function () {
-        // color: #FFF;border-color: #e4393c;background: #e4393c;
+        // color: #FFF;border-color: #e4393c;background: #e4393c;高亮
+        // color: #333;border-color: #CCC;background: #FFF;默认
         changeStyle(this);
         var sort = $(this).attr("sort");
         sort = $(this).hasClass("desc")?sort+"_desc":sort+"_asc";
