--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -1044,12 +1044,14 @@
                 <div class="filter">
                     <!--综合排序-->
                     <div class="filter_top">
-                        <div class="filter_top_left" th:with="p=${param.sort}">
+                        <div class="filter_top_left" th:with="p=${param.sort},priceRange=${param.skuPrice}">
                             <a  th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'hotScore')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}" th:attr="style=${(#strings.isEmpty(p)||#strings.startsWith(p,'hotScore'))?'color: #FFF;border-color: #e4393c;background: #e4393c;':'color: #333;border-color: #CCC;background: #FFF;'}" sort="hotScore" href="/static/search/#">综合排序[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'hotScore')&&#strings.endsWith(p,'desc'))?"↓":"↑"}]]</a>
                             <a  th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}" th:attr="style=${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount'))?'color: #FFF;border-color: #e4393c;background: #e4393c;':'color: #333;border-color: #CCC;background: #FFF;'}"   sort="saleCount" href="/static/search/#">销量[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount')&&#strings.endsWith(p,'desc'))?"↓":"↑"}]]</a>
                             <a   th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"  th:attr="style=${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice'))?'color: #FFF;border-color: #e4393c;background: #e4393c;':'color: #333;border-color: #CCC;background: #FFF;'}"  sort="skuPrice" href="/static/search/#">价格[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice')&&#strings.endsWith(p,'desc'))?"↓":"↑"}]]</a>
                             <a class="sort_a"  href="/static/search/#">评论分</a>
                             <a  class="sort_a" href="/static/search/#">上架时间</a>
+                            <input id="skuPriceFrom" type="number" style="width: 100px;margin-left: 30px" th:value="${#strings.isEmpty(priceRange)?'':#strings.substringBefore(priceRange,'_')}"> -
+                            <input id="skuPriceTo"  type="number" style="width: 100px;"  th:value="${#strings.isEmpty(priceRange)?'':#strings.substringAfter(priceRange,'_')}"> <button id="skuPriceSearchBtn">确定</button>
                         </div>
                         <div class="filter_top_right">
                             <span class="fp-text">
@@ -1987,13 +1989,13 @@
     })
 
     function searchProducts(name, value) {
-        var href = location.href + "";
-        if (href.indexOf("?") != -1) {
-            location.href = location.href + "&" + name + "=" + value;
-        } else {
-            location.href = location.href + "?" + name + "=" + value;
-        }
-
+        // var href = location.href + "";
+        // if (href.indexOf("?") != -1) {
+        //     location.href = location.href + "&" + name + "=" + value;
+        // } else {
+        //     location.href = location.href + "?" + name + "=" + value;
+        // }
+        location.href = replaceParamVal(location.href,"keyword",value);
     }
 
     function searchByKeyword() {
@@ -2057,6 +2059,12 @@
             $(ele).text(text);
         }
     }
+    $('#skuPriceSearchBtn').click(function () {
+        var from = $("#skuPriceFrom").val();
+        var to = $("#skuPriceTo").val();
+        var query = from+"_"+to;
+        location.href = replaceParamVal(location.href,'skuPrice',query);
+    });
 </script>
 </body>
 </html>
