--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -595,10 +595,10 @@
 							<div class="box-attr clear" th:each="attr:${item.saleAttr}">
 								<dl>
 									<dt>选择[[${attr.attrName}]]</dt>
-									<dd th:each="val:${#strings.listSplit(attr.attrValues,',')}">
-										<a href="/static/item/#">
+									<dd th:each="vals:${attr.attrValues}">
+										<a  th:attr="skus=${vals.skuIds},class=${#lists.contains(#strings.listSplit(vals.skuIds,','),item.info.skuId.toString())}?'sku_attr_value checked':'sku_attr_value'" >
 <!--											<img src="/static/item/img/59ddfcb1Nc3edb8f1.jpg" /> -->
-											[[${val}]]
+											[[${vals.attrValue}]]
 										</a>
 									</dd>
 								</dl>
@@ -1266,6 +1266,14 @@
 	<script src="/static/item/js/jquery1.9.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/static/item/js/js.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
+		$(".sku_attr_value").click(function () {
+
+		});
+		$(function () {
+			$(".sku_attr_value").parent().css({"border":"solid 1px #CCC"});
+			$("a[class='sku_attr_value checked']").parent().css({"border":"solid 1px red"});
+
+		})
 	</script>
 
 </html>
