--- a/gulimall-test-sso-server/src/main/resources/templates/login.html
+++ b/gulimall-test-sso-server/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>登录</title>
@@ -8,6 +8,7 @@
 <form action="/doLogin" method="post">
     用户名<input name="username"/><br/>
     密码<input name="password" type="password"/><br/>
+    <input type="hidden" name="url" th:value="${url}">
     <input type="submit" value="登录">
 </form>
 </body>
