--- a/gulimall-cart/src/main/resources/templates/success.html
+++ b/gulimall-cart/src/main/resources/templates/success.html
@@ -25,10 +25,13 @@
         </ul>
 
         <ul class="hd_wrap_right">
-        <li class="forel">
-        <a href="/static/cart//javascript:;" class="link_login">你好,请登录</a>&nbsp;
-    <a href="/static/cart//javascript:;" class="link_regist">免费注册</a>
-        </li>
+            <li>
+                <a  th:if="${session.loginUser!=null}">欢迎:[[${session.loginUser==null?'':session.loginUser.nickname}]]</a>
+                <a href="http://auth.gulimall.com/login.html" th:if="${session.loginUser==null}">请登录</a>
+            </li>
+            <li>
+                <a th:if="${session.loginUser==null}" href="http://auth.gulimall.com/reg.html" class="li_2">免费注册</a>
+            </li>
         <li class="spacer"></li>
 
         <li>
