--- a/gulimall-order/src/main/resources/templates/confirm.html
+++ b/gulimall-order/src/main/resources/templates/confirm.html
@@ -730,7 +730,13 @@
 				<p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥<b id="payPriceEle"></b></span></p>
 				<p class="yfze_b">寄送至： <span id="receiveAddressEle"></span> 收货人：<span id="receiverEle"></span> 188****5052</p>
 			</div>
-			<button class="tijiao">提交订单</button>
+			<form action="http://order.gulimall.com/submitOrder" method="post">
+				<input id="addrIdInput" type="hidden" name="addrId">
+				<input id="payPriceInput" type="hidden" name="payPrice">
+				<input name="orderToken" th:value="${orderConfirmData.orderToken}">
+				<button class="tijiao" type="submit">提交订单</button>
+			</form>
+
 		</div>
 		</div>
 
@@ -980,12 +986,15 @@
 				getFare(addrId);
 			});
 			function getFare(addrId) {
+				$("#addrIdInput").val(addrId);
 				$.get("http://gulimall.com/api/ware/wareinfo/fare?addrId="+addrId,function (resp) {
 					console.log(resp);
 					$("#fareEle").text(resp.data.fare);
 					var total = [[${orderConfirmData.total}]];
 					// alert(total*1 +  data.data*1);
-					$("#payPriceEle").text(total*1 +  resp.data.fare*1);
+					var payPrice = total*1 +  resp.data.fare*1;
+					$("#payPriceEle").text(payPrice);
+					$("#payPriceInput").val(payPrice);
 					$("#receiveAddressEle").text(resp.data.address.province+resp.data.address.city+resp.data.address.detailAddress);
 					$("#receiverEle").text(resp.data.address.name)
 				})
