--- a/gulimall-order/src/main/resources/templates/pay.html
+++ b/gulimall-order/src/main/resources/templates/pay.html
@@ -20,7 +20,7 @@
         <dl>
           <dt><img src="/static/order/pay/img\saoyisao.png" alt=""></dt>
           <dd>
-            <span>订单提交成功，请尽快付款！订单号：[[${submitOrderResp.order}]]</span>
+            <span>订单提交成功，请尽快付款！订单号：[[${submitOrderResp.order.orderSn}]]</span>
             <span>应付金额<font>[[${#numbers.formatDecimal(submitOrderResp.order.payAmount,1,2)}]]</font>元</span>
           </dd>
           <dd>
@@ -100,7 +100,8 @@
             <img src="/static/order/pay/img\weixin.png" alt="">微信支付
           </li>
 		  <li>
-            <img src="/static/order/pay/img\zhifubao.png" style="weight:auto;height:30px;" alt="">支付宝
+            <img src="/static/order/pay/img\zhifubao.png" style="weight:auto;height:30px;" alt="">
+            <a th:href="'http://order.gulimall.com/payOrder?orderSn='+${submitOrderResp.order.orderSn}">支付宝</a>
           </li>
         </ul>
       </div>
