319、商城业务-秒杀服务-秒杀页面渲染

--- a/gulimall-product/src/main/resources/templates/index.html
+++ b/gulimall-product/src/main/resources/templates/index.html
@@ -588,10 +588,14 @@
       var keyword=$("#searchText").val()
       window.location.href="http://search.gulimall.com/list.html?keyword="+keyword;
   }
+  function to_href(skuId){
+    location.href = "http://item.gulimall.com/"+skuId+".html";
+  }
   $.get("http://seckill.gulimall.com/currentSeckillSkus",function (resp) {
     if(resp.data.length>0){
       resp.data.forEach(function (item) {
-        $("<li></li>").append($("<img style='width: 130px;height: 130px;' src='"+item.skuInfo.skuDefaultImg+"'/>"))
+
+        $("<li onclick='to_href("+item.skuId+")'></li>").append($("<img style='width: 130px;height: 130px;' src='"+item.skuInfo.skuDefaultImg+"'/>"))
                 .append($("<p>"+item.skuInfo.skuTitle+"</p>"))
                 .append($("<span>"+item.seckillPrice+"</span>"))
                 .append($("<s>"+item.skuInfo.price+"</s>"))
