--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -510,8 +510,14 @@
 									<span>￥</span>
 									<span th:text="${#numbers.formatDecimal(item.info.price,3,2)}">4499.00</span>
 								</li>
-								<li>
-									预约享资格
+								<li style="color: red" th:if="${item.seckillInfoVo!=null}">
+									<span th:if="${#dates.createNow().getTime()< item.seckillInfoVo.startTime}">
+										商品将会在[[${#dates.format(new java.util.Date(item.seckillInfoVo.startTime),"yyyy-MM-dd HH:mm:ss")}]]进行秒杀
+									</span>
+									<span th:if="${#dates.createNow().getTime()>=item.seckillInfoVo.startTime && #dates.createNow().getTime()<=item.seckillInfoVo.endTime }">
+										秒杀价[[${#numbers.formatDecimal(item.seckillInfoVo.seckillPrice,1,2)}]]
+									</span>
+<!--									[[${#dates.createNow().getTime()>=item.seckillInfoVo.startTime }]]-->
 								</li>
 								<li>
 									<a href="/static/item/">
