--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -636,11 +636,17 @@
 
 								</div>
 							</div>
-							<div class="box-btns-two">
+							<div class="box-btns-two" th:if="${#dates.createNow().getTime()>=item.seckillInfoVo.startTime && #dates.createNow().getTime()<=item.seckillInfoVo.endTime }">
+								<a href="#" id="seckillA" th:attr="skuId=${item.info.skuId},sessionId=${item.seckillInfoVo.promotionSessionId},code=${item.seckillInfoVo.randomCode}">
+									立即抢购[[${item.seckillInfoVo.promotionId}]]
+								</a>
+							</div>
+							<div class="box-btns-two" th:if="${#dates.createNow().getTime()<item.seckillInfoVo.startTime || #dates.createNow().getTime()>item.seckillInfoVo.endTime }">
 								<a href="#" id="addToCartA" th:attr="skuId=${item.info.skuId}">
 									加入购物车
 								</a>
 							</div>
+
 							<div class="box-btns-three">
 								<img src="/static/item/img/e4ed3606843f664591ff1f68f7fda12d.png" alt="" /> 分享
 							</div>
@@ -1306,6 +1312,32 @@
 			var num = $("#numInput").val();
 			var skuId = $(this).attr("skuId");
 			location.href="http://cart.gulimall.com/addToCart?skuId="+skuId+"&num="+num;
+			return false;
+		})
+		// $("#seckillA").click(function () {
+		// 	var isLogin = [[${session.loginUser!=null}]];
+		// 	if(isLogin){
+		// 		var killId = $(this).attr("sessionid")+"_"+ $(this).attr("skuid");
+		// 		var key = $(this).attr("code");
+		// 		var num = $("#numInput").val();
+		// 		location.href="http://seckill.gulimall.com/kill?killId="+killId+"&key="+key+"&num="+num;
+		// 	}else {
+		// 		alert("秒杀请先登录")
+		// 	}
+		//
+		// 	return false;
+		// })
+		$("#seckillA").click(function () {
+			// var isLogin = [[${session.loginUser!=null}]];
+			// if(isLogin){
+				var killId = $(this).attr("sessionid")+"_"+ $(this).attr("skuid");
+				var key = $(this).attr("code");
+				var num = $("#numInput").val();
+				location.href="http://seckill.gulimall.com/kill?killId="+killId+"&key="+key+"&num="+num;
+			// }else {
+			// 	alert("秒杀请先登录")
+			// }
+
 			return false;
 		})
 	</script>
