--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -636,12 +636,12 @@
 
 								</div>
 							</div>
-							<div class="box-btns-two" th:if="${#dates.createNow().getTime()>=item.seckillInfoVo.startTime && #dates.createNow().getTime()<=item.seckillInfoVo.endTime }">
+							<div class="box-btns-two" th:if="${item.seckillInfoVo!=null && (#dates.createNow().getTime()>=item.seckillInfoVo.startTime && #dates.createNow().getTime()<=item.seckillInfoVo.endTime) }">
 								<a href="#" id="seckillA" th:attr="skuId=${item.info.skuId},sessionId=${item.seckillInfoVo.promotionSessionId},code=${item.seckillInfoVo.randomCode}">
 									立即抢购[[${item.seckillInfoVo.promotionId}]]
 								</a>
 							</div>
-							<div class="box-btns-two" th:if="${#dates.createNow().getTime()<item.seckillInfoVo.startTime || #dates.createNow().getTime()>item.seckillInfoVo.endTime }">
+							<div class="box-btns-two" th:if="${item.seckillInfoVo==null||(#dates.createNow().getTime()<item.seckillInfoVo.startTime || #dates.createNow().getTime()>item.seckillInfoVo.endTime)}">
 								<a href="#" id="addToCartA" th:attr="skuId=${item.info.skuId}">
 									加入购物车
 								</a>
